--- a/assets/css/download.css
+++ b/assets/css/download.css
@@ -33,6 +33,7 @@
   .content {
     padding: 1.5rem;
     border-top: 0.2rem solid #5e6061;
+    overflow: hidden;
   }
   
   .content p {
@@ -239,3 +240,149 @@
   #cooldown-message{
     opacity: 0.3;
   }
+
+#skin-form {
+  text-align: left;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  row-gap: 0.5rem;
+}
+
+.file-label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.label-design {
+  display: flex;
+  align-items: center;
+
+  cursor: pointer;
+  border: #1e1e1f 2px solid;
+  background-color: #313233;
+  box-shadow: inset 0 3px 0px 0px #1e1e1f;
+  width: 100%;
+  border-right: none;
+
+  max-inline-size: 100%;
+}
+
+.label-design svg {
+  padding: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  box-shadow: inset 0 -3px 0px 0px #58585a, inset 1px 1px 0px 0px #ecedee, inset -1px -4px 0px 0px #ecedee;
+  border: #1e1e1f 2px solid;
+  background-color: #d0d1d4;
+  margin-top: -6px;
+  margin-left: auto;
+}
+
+.file-label:hover .label-design svg {
+  box-shadow: inset 0 -3px 0px 0px #58585a, inset 1px 1px 0px 0px #ecedee, inset -1px -4px 0px 0px #ecedee, 0 0 0 2px white;
+}
+.file-label:active .label-design svg {
+  background-color: #3c8527;
+  box-shadow: inset 0 0 2px 0px #50913d;
+}
+
+.label-design div {
+  padding-left: 10px;
+  margin-right: 0;
+  font-size: 1rem;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+#name {
+  box-shadow: inset 0 3px 0px 0px #1e1e1f;
+  background-color: #313233;
+  border: #1e1e1f 2px solid;
+  padding: 8px;
+  font-family: minecraftia;
+  color: #b3b3b3;
+  font-size: medium;
+  letter-spacing: 1px;
+}
+
+#name::placeholder {
+  opacity: 0.4;
+}
+
+#submit-button {
+  border: #1e1e1f 2px solid;
+  background-color: #d0d1d4;
+  font-family: minecraftia;
+  font-size: medium;
+  padding: 10px;
+  width: 100%;
+  letter-spacing: 1px;
+  box-shadow: inset 0 -4px 0px 0px #58585a , inset 2px 2px 0px 0px #ecedee, inset -2px -6px 0px 0px #ecedee;
+}
+
+#submit-button:hover {
+  box-shadow: inset 0 -4px 0px 0px #58585a , inset 2px 2px 0px 0px #ecedee, inset -2px -6px 0px 0px #ecedee, 0 0 0 2px white;
+}
+
+#submit-button:active {
+  background-color: #3c8527;
+  box-shadow: inset 0 0 2px 0px #50913d;
+}
+
+#progress-container {
+  width: 100%;
+  border: 2px solid #fff;
+  position: relative;
+  height: 25px;
+  background-color: #444;
+  margin-top: 20px;
+}
+
+#progress-bar {
+  width: 0%;
+  height: 100%;
+  background-color: #fff;
+  box-shadow: inset 0 0 0 3px #484a4b;
+}
+
+#progress-text {
+  position: absolute;
+  color: black;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1em;
+}
+
+#download-link {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  background-color: #7345e5;
+  border: #1e1e1f 2px solid;
+  box-shadow: inset 0 -4px 0px 0px #4a1cac , inset 2px 2px 0px 0px #8e4aeb, inset -2px -6px 0px 0px #8e4aeb;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color 0.3s;
+  letter-spacing: 1px;
+}
+
+#download-link:hover {
+  background-color: #5937b1;
+  box-shadow: inset 0 -4px 0px 0px #4a1cac , inset 2px 2px 0px 0px #8e4aeb, inset -2px -6px 0px 0px #8e4aeb, 0 0 0 2px white;
+}
+
+#download-link:active {
+  box-shadow: inset 2px 2px 0px 0px #8e4aeb, inset -2px -2px 0px 0px #8e4aeb;
+}
+
+#message {
+  line-height: 30px;
+}
+
